# dash

./: CMakeLists.txt
include/: config.h.in  cpp_string.h  dalloc.h  interpreter.h  io.h  job.h  process.h  shell.h
src/: cpp_string.c  dalloc.c  interpreter.c  io.c  job.c  main.c  shell.c
